[metadata]
name = visepoint
version = 0.12.84
author = "kitsu#0006"
author_email = "kitsu@visepoint.net"
description = "This Python module is for interacting with the visepoint API!"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/visepoint/visepoint-py

[options]
packages = find:
python_requires = >=3.9
include_package_data = True